css/rumble.css
/* MAIN */

html {
  background: #4a6224 url("/images/rumble/pattern.jpg");
}

body {
  font-size: 75%;
  line-height: 1.25;
  font-family: Helvetica, Arial, sans-serif;
  background: transparent url("/images/rumble/bg-head.png") no-repeat center top;
  color: #fff;
}

a, a:visited {
  color: #fff;
  border-bottom: 1px solid #ffd40c;
}

a:hover {
  border-bottom: 1px solid #fff;
}

nav:after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: " ";
  clear: both;
  height: 0;
  min-height: 0;
}

/* HEADING */

h1 {
  color: #ffd40c;
  text-transform: uppercase;
  text-shadow: 0 2px 2px #000;
  text-shadow: 0 2px 2px rgba(0,0,0,.5);
  font-weight: bold;
  letter-spacing: -2px;
}

h2 {
  margin: 2em 0 0;
  color: #ffd40c;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: -1px;
  font-size: 1.2em;
}

h1 + h2 {
  margin: 0;
}

/* HEADER */

header {
  width: 960px;
  margin: auto;
  font-size: 1.2em;
}

header nav ul li {
  float: left;
}

nav#language-selector {
  padding-top: 20px;
  float: right;
}

nav#language-selector a,
nav#language-selector a:visited {
  border-bottom: 1px solid #fff;
}

nav#language-selector a:hover {
  border-bottom: 1px solid #ffd40c;
}

nav#language-selector ul li:before {
  margin-left: 10px;
  padding-right: 10px;
  content: "|";
}

nav#language-selector ul li:first-child:before {
  content: "";
}

nav#menu {
  float: left;
}

nav#menu ul li {
  margin: 0 5px;
  height: 94px;
}

nav#menu ul li.current {
  background: transparent url("/images/rumble/sprites.png") no-repeat 0 -385px;
}

nav#menu ul li a {
  display: block;
  padding: 25px 25px 20px 55px;
  text-transform: uppercase;
  border-bottom: none;
  font-size: .9em;
  background-repeat: no-repeat;
  background-image: url("/images/rumble/sprites.png");
}

nav#menu ul li#home a {
  background-position: 0 -168px;
}

nav#menu ul li#rules a {
  background-position: 0 -258px;
}

nav#menu ul li#faq a {
  background-position: 0 -77px;
}

nav#menu ul li#prizes a {
  background-position: 0 12px;
}

nav#menu ul li a:hover {
  background-color: rgba(0,0,0,.1);
}

#logo {
  padding: 25px 0 0 0;
  width: 352px;
  height: 122px;
  clear: left;
}

#logo a {
  display: block;
  width: 352px;
  height: 122px;
  background: url("/images/rumble/startupdev-rumble-logo.png") no-repeat 0 0;
  text-indent: -9999px;
  border: none;
}

#logo a:hover {
  opacity: .8;
}

#info {
  margin-top: -145px;
  width: 525px;
  font-weight: bold;
  float: right;
}

#info a {
  display: block;
  width: 164px;
  height: 164px;
  border-bottom: none;
  text-indent: -9999px;
  float: right;
}

#info a#join-badge-pt {
  background: url("/images/rumble/bt-faca-sua-inscricao.png") no-repeat 0 0;
}

#info a#join-badge-en {
  background: url("/images/rumble/bt-make-your-subscription.png") no-repeat 0 0;
}

#info a#join-badge-pt:hover,
#info a#join-badge-en:hover {
  opacity: .8;
}

#info #when {
  padding: 40px 170px 20px 5px;
  color: #ffd40c;
  font-size: 1.8em;
  text-shadow: 0 2px 2px #000;
  text-shadow: 0 2px 2px rgba(0,0,0,.5);
}

#info #when #numeral {
  font-size: 0.6em;
  vertical-align: top;
}

#info #preamble {
  padding: 0 195px 0 0;
  text-transform: uppercase;
  font-size: 1.4em;
  text-align: center;
  text-shadow: 0 2px 2px #000;
  text-shadow: 0 2px 2px rgba(0,0,0,.5);
}

#info #preamble span {
  display: block;
  font-size: 1.3em;
}

/* MASTHEAD */

header.fixed {
  padding-top: 95px;
}

header.fixed #masthead {
  width: 928px;
  margin-left: -4px;
  padding: 0 30px 0 10px;
  position: fixed;
  top: 0;
  background: transparent url("/images/rumble/bg-masthead.png") no-repeat 0 0;
}

#masthead:after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: " ";
  clear: both;
  height: 0;
  min-height: 0;
}

/* CONTAINER */

#container {
  margin: 40px 0;
  padding: 40px 0;
  background: transparent url("/images/rumble/bg-content.png");
  text-shadow: 0 2px 2px #000;
  text-shadow: 0 2px 2px rgba(0,0,0,.5);
  clear: both;
}

/* SECTION */

#container section {
  width: 880px;
  margin: auto;
  font-size: 1.4em;
  line-height: 1.4;
}

#container section p,
#container section li {
  margin: 1.4em 0;
}

#container section h1 {
  margin: .5em 0;
  text-align: center;
  font-size: 2em;
}

#container section.home {
  width: 660px;
  text-align: center;
}

#container section.language h1 {
  font-size: 1.2em;
  letter-spacing: 0;
}

#container section.language h1 span {
  padding: 0 20px;
}

#container section.language ul {
  padding-right: 75px;
  text-align: center;
}

#container section.language ul li {
  display: inline;
  padding: 0 40px;
}

a#bt-join-now-pt,
a#bt-join-now-en {
  display: block;
  margin: 0 auto 60px;
  width: 248px;
  height: 67px;
  border-bottom: none;
  text-indent: -9999px;
}

a#bt-join-now-pt:hover,
a#bt-join-now-en:hover {
  opacity: .8;
}

a#bt-join-now-pt {
  background: url("/images/rumble/bt-inscreva-se.png") no-repeat 0 0;
}

a#bt-join-now-en {
  background: url("/images/rumble/bt-subscribe.png") no-repeat 0 0;
}

/* COMPLEMENTARY CONTENT */

section#banner {
  margin: auto;
  width: 800px;
  height: 134px;
  padding: 30px 30px 0 120px;
  background: url("/images/rumble/bg-banner.png") no-repeat 0 0;
}

section#banner h1 {
  font-size: 2.5em;
}

section#banner p {
  margin: .6em 0 0;
  line-height: 1.4;
  font-size: 1.4em;
}

/* SUPPORT */

section#support {
  margin: 40px 0 20px;
  padding: 20px 0;
  text-align: center;
  background-color: rgba(0,0,0,.2);
}

section#support h1 {
  margin: .5em 0;
  font-size: 2em;
  letter-spacing: -1px;
}

section#support nav ul li {
  padding: 40px;
  display: inline;
}

section#support nav {
  padding: 20px 0;
  background-color: #fff;
  background-color: rgba(255,255,255,.7);
}

section#support a {
  border-bottom: none;
}

section#support a img {
  vertical-align: middle;
}

section#support a:hover {
  opacity: .9;
}

/* FOOTER */

footer {
  padding: 20px 0;
  text-align: center;
}

